--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "game-of-life"
-version = "0.1.0"
 edition = "2021"
+version = "0.1.0"
 
 [dependencies]
-minifb = { version = "0.27.0", default-features = false, features = ["x11"] }
+single_value_channel = "1.2.2"
+
+[dependencies.minifb]
+version = "0.27.0"
+features = ["x11", "libc"]
+default-features = false
